# PPIFold

./: .gitconfig  .gitmodules  AF_FLAGS  File_proteins.py  PPIFold.py  README.md  README2.md  Utils.py  conf.txt  create_individual_feature_modif.py  homo_oligo.txt  main.py  pre_APD.py  setup.cfg  setup.py  temp_file.txt  test.fasta  test.txt  utils.py
AlphaLink2/unifold/: alphalink_inference.py  dataset.py
AlphaLink2/unifold/data/: process.py  protein.py
AlphaLink2/unifold/modules/: common.py
PPIFold/: File_proteins.py  PPIFold.py  Utils.py  create_individual_feature_modif.py
example/: OOM_int.txt  all_vs_all.txt  command  conf.txt  homo_oligo.txt  shallow_MSA.txt  table.cyt  temp_file.txt  test.fasta  test.txt  test_summary.signalp5
example/feature_pickle/O50328_env/: bfd.mgnify30.metaeuk30.smag30.a3m  pdb70.m8  uniref.a3m
example/pickle_feature/P09783_env/: bfd.mgnify30.metaeuk30.smag30.a3m  pdb70.m8  uniref.a3m
example/result_all_vs_all/: new_predictions_with_good_interpae.csv  predictions_with_good_interpae.csv
example/result_homo_oligo/: new_predictions_with_good_interpae.csv  predictions_with_good_interpae.csv
ppifold/: __init__.py
resolve_error/: README.md
test/: OOM_int.txt  Sequences R388_KikA-to-TrwA.docx  all_vs_all.txt  homo_oligo.txt  predictions_with_good_interpae.csv  table.csv  table.cyt  temp_file.txt  test.fasta  test.txt  test_summary.signalp5  utils.py
test/feature/: P09776_feature_metadata_2024-07-18.json  P09776_feature_metadata_2024-07-19.json  P0A3V6_feature_metadata_2024-07-19.json
test/feature/O50331/: mgnify_hits.sto  (+2 more)
(+49 files in other folders)
